# agents-in-azure-playbook

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
docs/adrs/: 0001-runtime-ownership.md  0002-hosted-agents-preview.md  0003-mcp-a2a-protocol-split.md  0004-ports-and-adapters.md
docs/playbooks/: hosted-agent-imageerror.md
samples/code-agent-foundry/: create_prompt_agent.py
samples/custom-agent-runtime/: app.py
samples/hosted-agent-fastapi/: Dockerfile  agent.yaml  app.py
src/agents_in_azure_playbook/: __init__.py  fakes.py  manifest.py  ports.py  responses_adapter.py  runtime.py
tests/: test_manifest.py  test_responses_adapter.py  test_runtime.py
